--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="img/bikcraft.svg" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
-                <ul class="header-menu">
+                <ul class="header-menu font-1-m">
                     <li><a href="./">Bicicletas</a></li>
                     <li><a href="./">Seguros</a></li>
                     <li><a href="./">Contato</a></li>
@@ -26,8 +26,8 @@
     <main class="introducao-bg">
         <div class="introducao">
             <div class="introducao-conteudo">
-                <h1 >Bicicletas feitas sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a href="./bicicletas" class="button">Selecione a sua</a>
             </div>
             <div>
@@ -35,5 +35,33 @@
             </div>
         </div>
     </main>
+
+    <article class="bicicleta-lista">
+        <h2 class="font-1-xxl">escolha a sua<span class="cor-p01">.</span></h2>
+
+        <ul>
+            <li>
+                <a href="./bicicletas/magic.html">
+                    <img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Magic Might">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m cor-08">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/nimbus.html">
+                    <img src="img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus Stark">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m cor-08">R$ 4999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/.html">
+                    <img src="img/bicicletas/nebula-home.jpg" alt="Bicicleta Nebula Cosmic">
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
+                    <span class="font-2-m cor-08">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 </body>
 </html>
