--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header conteiner ">
             <a href="./">
                 <img src="img/bikcraft.svg" alt="Bikcraft">
             </a>
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main class="introducao-bg">
-        <div class="introducao">
+        <div class="introducao conteiner">
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
                 <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -35,9 +35,8 @@
             </div>
         </div>
     </main>
-
     <article class="bicicleta-lista">
-        <h2 class="font-1-xxl">escolha a sua<span class="cor-p01">.</span></h2>
+        <h2 class="conteiner font-1-xxl">escolha a sua<span class="cor-p01">.</span></h2>
 
         <ul>
             <li>
@@ -62,6 +61,32 @@
                 </a>
             </li>
         </ul>
+    </article>
+    <article class="tecnologia-bg">
+        <div class="tecnologia conteiner">
+            <div class="tecnologia-conteudo">
+                <span class="font-2-l-b cor-05">tecnologia avançada</span>
+                <h2 class="font-1-xxl cor-00">você escolhe as suas cores e componentes<span class="cor-p01">.</span></h2>
+                <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                <a href="./" class="font-2-l-b cor-p01 link">escolha um modelo</a>
+                <div class="tecnologia-vantagens">
+                    <div>
+                        <img src="img/icones/eletrica.svg" alt="Ícone Motor Elétrico">
+                        <h3 class="font-1-m cor-00">Motor Elétrico</h3>
+                        <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                    </div>
+                    <div>
+                        <img src="img/icones/rastreador.svg" alt="Ícone Rastreador">
+                        <h3 class="font-1-m cor-00">Rastreador</h3>
+                        <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tecnologia-imagem">
+                <img src="img/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+
     </article>
 </body>
 </html>
