--- a/index.html
+++ b/index.html
@@ -86,7 +86,30 @@
                 <img src="img/fotos/tecnologia.jpg" alt="">
             </div>
         </div>
-
     </article>
+    <section class="parceiros" aria-label="Nossos Parceiros">
+        <h2 class="conteiner font-1-xxl cor-12">nossos parceiros<span class="cor-p01">.</span></h2>
+        <ul class="parceiros-lista">
+            <li><img src="img/parceiros/caravan.svg" alt="Caravan"></li>
+            <li><img src="img/parceiros/dogs.svg" alt="Dogs"></li>
+            <li><img src="img/parceiros/flexblog.svg" alt="FlexBlog"></li>
+            <li><img src="img/parceiros/handel.svg" alt="Handel"></li>
+            <li><img src="img/parceiros/lescone.svg" alt="Lescone"></li>
+            <li><img src="img/parceiros/ranek.svg" alt="Ranek"></li>
+            <li><img src="img/parceiros/surfbot.svg" alt="Surfbot"></li>
+            <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+        </ul>
+    </section>
+    <section class="depoimento">
+        <div>
+            <img src="img/fotos/depoimento.jpg" alt="">
+        </div>
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl cor-p05">
+                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+            </blockquote>
+            <span class="font-1-m-b cor-p04">Ana Júlia</span>
+        </div>
+    </section>
 </body>
 </html>
