Criação dos seguros

--- a/index.html
+++ b/index.html
@@ -111,5 +111,35 @@
             <span class="font-1-m-b cor-p04">Ana Júlia</span>
         </div>
     </section>
+    <article class="seguros-bg">
+        <div class="seguros conteiner">
+            <h2 class="font-1-xxl cor-00">seguros<span class="cor-p01">.</span></h2>
+            <div class="seguros-item">
+                    <h3 class="font-1-xl cor-06">PRATA</h3>
+                    <span class="font-1-xl cor-00">R$ 199<span class="font-1-xs">mensal</span></span>
+                    <ul class="font-2-m cor-00">
+                        <li>Duas trocas por ano</li>
+                        <li>Assistência técnica</li>
+                        <li>Suporte 08h às 18h</li>
+                        <li>Cobertura estadual</li>
+                    </ul>
+                    <a href="./orcamento.html" class="button secundario">inscreva-se</a>               
+            </div>
+            <div class="seguros-item">
+                    <h3 class="font-1-xl cor-p01">OURO</h3>
+                    <span class="font-1-xl cor-00">R$ 299<span class="font-1-xs">mensal</span></span> 
+                    <ul class="font-2-m cor-00">
+                        <li>Duas trocas por ano</li>
+                        <li>Assistência técnica</li>
+                        <li>Suporte 08h às 18h</li>
+                        <li>Cobertura estadual</li>
+                        <li>Cobertura nacional</li>
+                        <li>Desconto em parceiros</li>
+                        <li>Acesso ao Clube Bikcraft</li>
+                    </ul>
+                    <a href="./orcamento.html" class="button">inscreva-se</a>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
