--- a/index.html
+++ b/index.html
@@ -141,5 +141,36 @@
             </div>
         </div>
     </article>
+    <footer class="rodape-bg">
+        <div class="rodape conteiner">
+            <img src="img/bikcraft.svg" alt="Logo Bikcraft">
+            <div  class="rodape-contato">
+                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                    <ul class="font-2-m cor-05">
+                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                        <li>Rua Ali Longe, 31 - Araruama</li>
+                        <li>Rio de Janeiro -RJ</li>
+                    </ul>
+                    <div class="rodape-redes">
+                        <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
+                        <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
+                        <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                    </div>      
+            </div>
+            <div class="rodape-informacoes">
+                <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
+                <nav>
+                    <ul class="font-2-m cor-05">
+                        <li><a href="">Bicicletas</a></li>
+                        <li><a href="">Seguros</a></li>
+                        <li><a href="">Contato</a></li>
+                        <li><a href="">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
