--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
-                    <li><a href="./">Bicicletas</a></li>
+                    <li><a href="./bicicletas.html">Bicicletas</a></li>
                     <li><a href="./">Seguros</a></li>
                     <li><a href="./">Contato</a></li>
                 </ul>
@@ -162,10 +162,10 @@
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
                 <nav>
                     <ul class="font-2-m cor-05">
-                        <li><a href="">Bicicletas</a></li>
+                        <li><a href="bicicletas.html">Bicicletas</a></li>
                         <li><a href="">Seguros</a></li>
                         <li><a href="">Contato</a></li>
-                        <li><a href="">Termos e Condições</a></li>
+                        <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
