--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
                     <li><a href="./bicicletas.html">Bicicletas</a></li>
-                    <li><a href="./">Seguros</a></li>
+                    <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./">Contato</a></li>
                 </ul>
             </nav>
