--- a/bicicletas.html
+++ b/bicicletas.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header-bg">
         <div class="header conteiner">
-            <a href="./">
+            <a href="./index.html">
                 <img src="img/bikcraft.svg" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
@@ -30,11 +30,11 @@
             </div>
         </div>
         <div class="bicicletas conteiner">
-            <div class="bicicleta-imagem">
+            <div class="bicicletas-imagem">
                 <img src="img/bicicletas/nimbus.jpg" alt="">
                 <span class="font-2-m cor-00">R$ 4999</span>
             </div>
-            <div class="bicicleta-conteudo">
+            <div class="bicicletas-conteudo">
                 <h2 class="font-1-xl">Nimbus Stark</h2>
                 <p class="font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <ul class="font-1-m cor-08">
@@ -52,7 +52,7 @@
                     <img src="img/bicicletas/magic.jpg" alt="">
                     <span class="font-2-m cor-00">R$ 2499</span>
                 </div>
-                <div class="bicicleta-conteudo">
+                <div class="bicicletas-conteudo">
                     <h2 class="font-1-xl cor-00">Magic Might</h2>
                     <p class="font-2-s cor-05">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                     <ul class="font-1-m cor-05">
@@ -66,11 +66,11 @@
             </div>
         </div>
         <div class="bicicletas conteiner">
-            <div class="bicicleta-imagem">
+            <div class="bicicletas-imagem">
                 <img src="img/bicicletas/nebula.jpg" alt="">
                 <span class="font-2-m cor-00">R$ 3999</span>
             </div>
-            <div class="bicicleta-conteudo">
+            <div class="bicicletas-conteudo">
                 <h2 class="font-1-xl">Nebula Cosmic</h2>
                 <p class="font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <ul class="font-1-m cor-08">
@@ -104,10 +104,10 @@
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
                 <nav>
                     <ul class="font-2-m cor-05">
-                        <li><a href="">Bicicletas</a></li>
-                        <li><a href="">Seguros</a></li>
+                        <li><a href="bicicletas.html">Bicicletas</a></li>
+                        <li><a href="bicicletas.html">Seguros</a></li>
                         <li><a href="">Contato</a></li>
-                        <li><a href="">Termos e Condições</a></li>
+                        <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
