--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-bg">
         <div class="header conteiner ">
-            <a href="./">
+            <a href="./index.html">
                 <img src="img/bikcraft.svg" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
@@ -163,7 +163,7 @@
                 <nav>
                     <ul class="font-2-m cor-05">
                         <li><a href="bicicletas.html">Bicicletas</a></li>
-                        <li><a href="">Seguros</a></li>
+                        <li><a href="seguros.html">Seguros</a></li>
                         <li><a href="">Contato</a></li>
                         <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
