--- a/termos.html
+++ b/termos.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header-bg">
         <div class="header conteiner">
-            <a href="./">
+            <a href="./index.html">
                 <img src="img/bikcraft.svg" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
@@ -61,10 +61,10 @@
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
                 <nav>
                     <ul class="font-2-m cor-05">
-                        <li><a href="">Bicicletas</a></li>
-                        <li><a href="">Seguros</a></li>
+                        <li><a href="bicicletas.html">Bicicletas</a></li>
+                        <li><a href="seguros.html">Seguros</a></li>
                         <li><a href="">Contato</a></li>
-                        <li><a href="">Termos e Condições</a></li>
+                        <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
