--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic Might | Bikcraft</title>
+    <title>Nebula Cosmic | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="bicicleta">
@@ -17,7 +17,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a href="../bicicletas.html">Bicicletas</a></li>
                     <li><a href="../seguros.html">Seguros</a></li>
-                    <li><a href="../">Contato</a></li>
+                    <li><a href="../contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -26,7 +26,7 @@
         <div>
             <div class="titulo conteiner">
                 <span class="font-2-xl cor-05">R$ 3999</span>
-                <h1 class="font-1-xxl cor-00">Magic Might<span class="cor-p01">.</span></h1>
+                <h1 class="font-1-xxl cor-00">Nebula Cosmic<span class="cor-p01">.</span></h1>
             </div>
         </div>
         <div class="bicicleta conteiner">
