--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
                 <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a href="./bicicletas" class="button">Selecione a sua</a>
+                <a href="./bicicletas.html" class="button">Selecione a sua</a>
             </div>
             <div>
                 <img src="img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="./bicicletas/.html">
+                <a href="./bicicletas/nebula.html">
                     <img src="img/bicicletas/nebula-home.jpg" alt="Bicicleta Nebula Cosmic">
                     <h3 class="font-1-xl">Nebula Cosmic</h3>
                     <span class="font-2-m cor-08">R$ 3999</span>
@@ -68,7 +68,7 @@
                 <span class="font-2-l-b cor-05">tecnologia avançada</span>
                 <h2 class="font-1-xxl cor-00">você escolhe as suas cores e componentes<span class="cor-p01">.</span></h2>
                 <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-                <a href="./" class="font-2-l-b cor-p01 link">escolha um modelo</a>
+                <a href="./bicicletas.html" class="font-2-l-b cor-p01 link">escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
                         <img src="img/icones/eletrica.svg" alt="Ícone Motor Elétrico">
@@ -164,7 +164,7 @@
                     <ul class="font-2-m cor-05">
                         <li><a href="bicicletas.html">Bicicletas</a></li>
                         <li><a href="seguros.html">Seguros</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                         <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
