--- a/bicicletas.html
+++ b/bicicletas.html
@@ -17,7 +17,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a href="./bicicletas.html">Bicicletas</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
-                    <li><a href="./">Contato</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -106,7 +106,7 @@
                     <ul class="font-2-m cor-05">
                         <li><a href="bicicletas.html">Bicicletas</a></li>
                         <li><a href="bicicletas.html">Seguros</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                         <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
