--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -132,7 +132,7 @@
                     <ul class="font-2-m cor-05">
                         <li><a href="../bicicletas.html">Bicicletas</a></li>
                         <li><a href="../seguros.html">Seguros</a></li>
-                        <li><a href="../">Contato</a></li>
+                        <li><a href="../contato.html">Contato</a></li>
                         <li><a href="../termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
