--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Contato | Bikcraft</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body id="contato">
     <header class="header-bg">
         <div class="header conteiner">
@@ -71,22 +73,55 @@
             </section>
         </div>
     </main>
+    <article class="lojas conteiner">
+        <h2 class="font-1-xxl">lojas locais<span class="cor-p01">.</span></h2>
+        <div class="lojas-info">
+            <img src="img/lojas/rj.jpg" alt="Local da loja RJ">
+            <div class="lojas-conteudo">
+                <h3 class="font-1-xl">Rio de Janeiro</h3>
+                <div class="lojas-dados font-2-s cor-08">
+                    <p>Rua Ali Longe, 31</p>
+                    <p>Rio de Janeiro - RJ</p>
+                </div>
+                <div class="lojas-dados font-2-s cor-08">
+                    <a href="+5521999999999">+55 21 9 9999-9999</a>
+                    <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+                </div>
+                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" alt=""> 08-18h de Seg à Dom</p>
+            </div>
+        </div>
+        <div class="lojas-info">
+            <img src="img/lojas/sp.jpg" alt="Local da loja SP">
+            <div class="lojas-conteudo">
+                <h3 class="font-1-xl">São Paulo</h3>
+                <div class="lojas-dados font-2-s cor-08">
+                    <p>Rua Ali Longe, 31</p>
+                    <p>São Paulo - SP</p>
+                </div>
+                <div class="lojas-dados font-2-s cor-08">
+                    <a href="+5521999999999">+55 21 9 9999-9999</a>
+                    <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+                </div>
+                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" alt="">08-18h de Seg à Dom</p>
+            </div>
+        </div>
+    </article>
     <footer class="rodape-bg">
         <div class="rodape conteiner">
             <img src="img/bikcraft.svg" alt="Logo Bikcraft">
-            <div  class="rodape-contato">
-                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
-                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-                        <li>Rua Ali Longe, 31 - Araruama</li>
-                        <li>Rio de Janeiro -RJ</li>
-                    </ul>
-                    <div class="rodape-redes">
-                        <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                        <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                        <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
-                    </div>      
+            <div class="rodape-contato">
+                <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                <ul class="font-2-m cor-05">
+                    <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Longe, 31 - Araruama</li>
+                    <li>Rio de Janeiro -RJ</li>
+                </ul>
+                <div class="rodape-redes">
+                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                </div>
             </div>
             <div class="rodape-informacoes">
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
@@ -94,7 +129,7 @@
                     <ul class="font-2-m cor-05">
                         <li><a href="bicicletas.html">Bicicletas</a></li>
                         <li><a href="bicicletas.html">Seguros</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                         <li><a href="termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
@@ -103,4 +138,5 @@
         </div>
     </footer>
 </body>
+
 </html>
