--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a href="./bicicletas.html">Bicicletas</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
-                    <li><a href="./">Contato</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
