--- a/bicicletas.html
+++ b/bicicletas.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bicicletas | Bikcraft</title>
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header-bg">
         <div class="header conteiner">
@@ -24,7 +27,7 @@
     </header>
     <main>
         <div class="titulo-bg">
-            <div class="conteiner">
+            <div class="titulo conteiner">
                 <span class="font-2-l-b cor-05">escolha a melhor para você</span>
                 <h2 class="font-1-xxl cor-00">nossas bicicletas<span class="cor-p01">.</span></h2>
             </div>
@@ -44,7 +47,7 @@
                     <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
                 </ul>
                 <a href="./bicicletas/nimbus.html" class="button seta">mais sobre</a>
-            </div> 
+            </div>
         </div>
         <div class="bicicletas-bg">
             <div class="bicicletas conteiner">
@@ -62,7 +65,7 @@
                         <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
                     </ul>
                     <a href="./bicicletas/magic.html" class="button seta">mais sobre</a>
-                </div> 
+                </div>
             </div>
         </div>
         <div class="bicicletas conteiner">
@@ -80,25 +83,25 @@
                     <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
                 </ul>
                 <a href="./bicicletas/nebula.html" class="button seta">mais sobre</a>
-            </div> 
+            </div>
         </div>
     </main>
     <footer class="rodape-bg">
         <div class="rodape conteiner">
             <img src="img/bikcraft.svg" alt="Logo Bikcraft">
-            <div  class="rodape-contato">
-                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
-                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-                        <li>Rua Ali Longe, 31 - Araruama</li>
-                        <li>Rio de Janeiro -RJ</li>
-                    </ul>
-                    <div class="rodape-redes">
-                        <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                        <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                        <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
-                    </div>      
+            <div class="rodape-contato">
+                <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                <ul class="font-2-m cor-05">
+                    <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Longe, 31 - Araruama</li>
+                    <li>Rio de Janeiro -RJ</li>
+                </ul>
+                <div class="rodape-redes">
+                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                </div>
             </div>
             <div class="rodape-informacoes">
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
@@ -115,4 +118,5 @@
         </div>
     </footer>
 </body>
+
 </html>
