--- a/seguros.html
+++ b/seguros.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguros | Bikcraft</title>
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header-bg">
         <div class="header conteiner">
@@ -27,29 +30,29 @@
             <span class="font-2-l-b cor-05">escolha seu seguro</span>
             <h2 class="font-1-xxl cor-00">você seguro<span class="cor-p01">.</span></h2>
             <div class="seguros-item">
-                    <h3 class="font-1-xl cor-06">PRATA</h3>
-                    <span class="font-1-xl cor-00">R$ 199<span class="font-1-xs">mensal</span></span>
-                    <ul class="font-2-m cor-00">
-                        <li>Duas trocas por ano</li>
-                        <li>Assistência técnica</li>
-                        <li>Suporte 08h às 18h</li>
-                        <li>Cobertura estadual</li>
-                    </ul>
-                    <a href="./orcamento.html" class="button secundario">inscreva-se</a>               
+                <h3 class="font-1-xl cor-06">PRATA</h3>
+                <span class="font-1-xl cor-00">R$ 199<span class="font-1-xs">mensal</span></span>
+                <ul class="font-2-m cor-00">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a href="./orcamento.html" class="button secundario">inscreva-se</a>
             </div>
             <div class="seguros-item">
-                    <h3 class="font-1-xl cor-p01">OURO</h3>
-                    <span class="font-1-xl cor-00">R$ 299<span class="font-1-xs">mensal</span></span> 
-                    <ul class="font-2-m cor-00">
-                        <li>Duas trocas por ano</li>
-                        <li>Assistência técnica</li>
-                        <li>Suporte 08h às 18h</li>
-                        <li>Cobertura estadual</li>
-                        <li>Cobertura nacional</li>
-                        <li>Desconto em parceiros</li>
-                        <li>Acesso ao Clube Bikcraft</li>
-                    </ul>
-                    <a href="./orcamento.html" class="button">inscreva-se</a>
+                <h3 class="font-1-xl cor-p01">OURO</h3>
+                <span class="font-1-xl cor-00">R$ 299<span class="font-1-xs">mensal</span></span>
+                <ul class="font-2-m cor-00">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a href="./orcamento.html" class="button">inscreva-se</a>
             </div>
         </div>
     </main>
@@ -117,24 +120,24 @@
                 <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
                 <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
-        </dl>  
+        </dl>
     </article>
     <footer class="rodape-bg">
         <div class="rodape conteiner">
             <img src="img/bikcraft.svg" alt="Logo Bikcraft">
-            <div  class="rodape-contato">
-                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
-                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-                        <li>Rua Ali Longe, 31 - Araruama</li>
-                        <li>Rio de Janeiro -RJ</li>
-                    </ul>
-                    <div class="rodape-redes">
-                        <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                        <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                        <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
-                    </div>      
+            <div class="rodape-contato">
+                <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                <ul class="font-2-m cor-05">
+                    <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Longe, 31 - Araruama</li>
+                    <li>Rio de Janeiro -RJ</li>
+                </ul>
+                <div class="rodape-redes">
+                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                </div>
             </div>
             <div class="rodape-informacoes">
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
@@ -151,4 +154,5 @@
         </div>
     </footer>
 </body>
+
 </html>
