--- a/termos.html
+++ b/termos.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos e Condições | Bikcraft</title>
+    <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header-bg">
         <div class="header conteiner">
@@ -26,7 +29,7 @@
         <div class="titulo-bg">
             <div class="termos-titulo conteiner">
                 <span class="font-2-l-b cor-05"">termos de uso</span>
-                <h1 class="font-1-xxl cor-00">termos e condições<span class="cor-p01">.</span></h1>
+                <h1 class=" font-1-xxl cor-00">termos e condições<span class="cor-p01">.</span></h1>
             </div>
         </div>
         <div class="termos font-2-s cor-10 conteiner">
@@ -43,19 +46,19 @@
     <footer class="rodape-bg">
         <div class="rodape conteiner">
             <img src="img/bikcraft.svg" alt="Logo Bikcraft">
-            <div  class="rodape-contato">
-                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
-                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-                        <li>Rua Ali Longe, 31 - Araruama</li>
-                        <li>Rio de Janeiro -RJ</li>
-                    </ul>
-                    <div class="rodape-redes">
-                        <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                        <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                        <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
-                    </div>      
+            <div class="rodape-contato">
+                <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                <ul class="font-2-m cor-05">
+                    <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Longe, 31 - Araruama</li>
+                    <li>Rio de Janeiro -RJ</li>
+                </ul>
+                <div class="rodape-redes">
+                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                </div>
             </div>
             <div class="rodape-informacoes">
                 <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
@@ -72,4 +75,5 @@
         </div>
     </footer>
 </body>
+
 </html>
