--- a/bicicletas.html
+++ b/bicicletas.html
@@ -14,7 +14,7 @@
     <header class="header-bg">
         <div class="header conteiner">
             <a href="./index.html">
-                <img src="img/bikcraft.svg" alt="Bikcraft">
+                <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
@@ -41,10 +41,10 @@
                 <h2 class="font-1-xl">Nimbus Stark</h2>
                 <p class="font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <ul class="font-1-m cor-08">
-                    <li><img src="img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                    <li><img src="img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                    <li><img src="img/icones/velocidade.svg" alt="">50 km/h</li>
-                    <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
+                    <li><img src="img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+                    <li><img src="img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+                    <li><img src="img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
+                    <li><img src="img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
                 </ul>
                 <a href="./bicicletas/nimbus.html" class="button seta">mais sobre</a>
             </div>
@@ -59,10 +59,10 @@
                     <h2 class="font-1-xl cor-00">Magic Might</h2>
                     <p class="font-2-s cor-05">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                     <ul class="font-1-m cor-05">
-                        <li><img src="img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                        <li><img src="img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                        <li><img src="img/icones/velocidade.svg" alt="">50 km/h</li>
-                        <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
+                        <li><img src="img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+                        <li><img src="img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+                        <li><img src="img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
+                        <li><img src="img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
                     </ul>
                     <a href="./bicicletas/magic.html" class="button seta">mais sobre</a>
                 </div>
@@ -77,10 +77,10 @@
                 <h2 class="font-1-xl">Nebula Cosmic</h2>
                 <p class="font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <ul class="font-1-m cor-08">
-                    <li><img src="img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-                    <li><img src="img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-                    <li><img src="img/icones/velocidade.svg" alt="">50 km/h</li>
-                    <li><img src="img/icones/rastreador.svg" alt="">Rastreador</li>
+                    <li><img src="img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+                    <li><img src="img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+                    <li><img src="img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
+                    <li><img src="img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
                 </ul>
                 <a href="./bicicletas/nebula.html" class="button seta">mais sobre</a>
             </div>
@@ -98,9 +98,9 @@
                     <li>Rio de Janeiro -RJ</li>
                 </ul>
                 <div class="rodape-redes">
-                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                    <a href="./"><img src="img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
                 </div>
             </div>
             <div class="rodape-informacoes">
