--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <header class="header-bg">
         <div class="header conteiner">
             <a href="./index.html">
-                <img src="img/bikcraft.svg" alt="Bikcraft">
+                <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
@@ -88,7 +88,7 @@
                     <a href="+5521999999999">+55 21 9 9999-9999</a>
                     <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
                 </div>
-                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" alt=""> 08-18h de Seg à Dom</p>
+                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de Seg à Dom</p>
             </div>
         </div>
         <div class="lojas-info">
@@ -103,7 +103,7 @@
                     <a href="+5521999999999">+55 21 9 9999-9999</a>
                     <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
                 </div>
-                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" alt="">08-18h de Seg à Dom</p>
+                <p class="loja-tempo font-1-s"><img src="img/icones/horario.svg" width="20" height="20" alt="">08-18h de Seg à Dom</p>
             </div>
         </div>
     </article>
@@ -119,9 +119,9 @@
                     <li>Rio de Janeiro -RJ</li>
                 </ul>
                 <div class="rodape-redes">
-                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                    <a href="./"><img src="img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
                 </div>
             </div>
             <div class="rodape-informacoes">
