--- a/seguros.html
+++ b/seguros.html
@@ -14,7 +14,7 @@
     <header class="header-bg">
         <div class="header conteiner">
             <a href="./index.html">
-                <img src="img/bikcraft.svg" alt="Bikcraft">
+                <img src="img/bikcraft.svg" width="136" height="32"alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
@@ -61,32 +61,32 @@
             <h2 class="font-1-xxl cor-00">vantagens<span class="cor-p01">.</span></h2>
             <ul>
                 <li>
-                    <img src="img/icones/eletrica.svg" alt="Icone Elétrica">
+                    <img src="img/icones/eletrica.svg" width="32" height="32" alt="Icone Elétrica">
                     <h3 class="font-1-l cor-00">Reparo Elétrico</h3>
                     <p class="font-2-s cor-06">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
                 </li>
                 <li>
-                    <img src="img/icones/carbono.svg" alt="Icone Carbono">
+                    <img src="img/icones/carbono.svg" width="32" height="32" alt="Icone Carbono">
                     <h3 class="font-1-l cor-00">Carbono</h3>
                     <p class="font-2-s cor-06">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
                 </li>
                 <li>
-                    <img src="img/icones/sustentavel.svg" alt="Icone Sustentável">
+                    <img src="img/icones/sustentavel.svg" width="32" height="32" alt="Icone Sustentável">
                     <h3 class="font-1-l cor-00">Sustentável</h3>
                     <p class="font-2-s cor-06">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
                 </li>
                 <li>
-                    <img src="img/icones/rastreador.svg" alt="Icone Rastreador">
+                    <img src="img/icones/rastreador.svg" width="32" height="32" alt="Icone Rastreador">
                     <h3 class="font-1-l cor-00">Rastreador</h3>
                     <p class="font-2-s cor-06">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
                 </li>
                 <li>
-                    <img src="img/icones/seguro.svg" alt="Icone Segurança">
+                    <img src="img/icones/seguro.svg" width="32" height="32" alt="Icone Segurança">
                     <h3 class="font-1-l cor-00">Segurança</h3>
                     <p class="font-2-s cor-06">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
                 </li>
                 <li>
-                    <img src="img/icones/velocidade.svg" alt="Icone Velocidade">
+                    <img src="img/icones/velocidade.svg" width="32" height="32" alt="Icone Velocidade">
                     <h3 class="font-1-l cor-00">Rapidez</h3>
                     <p class="font-2-s cor-06">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
                 </li>
@@ -124,7 +124,7 @@
     </article>
     <footer class="rodape-bg">
         <div class="rodape conteiner">
-            <img src="img/bikcraft.svg" alt="Logo Bikcraft">
+            <img src="img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
             <div class="rodape-contato">
                 <h3 class="font-2-l-b cor-00">CONTATO</h3>
                 <ul class="font-2-m cor-05">
@@ -134,9 +134,9 @@
                     <li>Rio de Janeiro -RJ</li>
                 </ul>
                 <div class="rodape-redes">
-                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                    <a href="./"><img src="img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
                 </div>
             </div>
             <div class="rodape-informacoes">
