--- a/termos.html
+++ b/termos.html
@@ -14,7 +14,7 @@
     <header class="header-bg">
         <div class="header conteiner">
             <a href="./index.html">
-                <img src="img/bikcraft.svg" alt="Bikcraft">
+                <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
@@ -45,7 +45,7 @@
     </main>
     <footer class="rodape-bg">
         <div class="rodape conteiner">
-            <img src="img/bikcraft.svg" alt="Logo Bikcraft">
+            <img src="img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
             <div class="rodape-contato">
                 <h3 class="font-2-l-b cor-00">CONTATO</h3>
                 <ul class="font-2-m cor-05">
@@ -55,9 +55,9 @@
                     <li>Rio de Janeiro -RJ</li>
                 </ul>
                 <div class="rodape-redes">
-                    <a href="./"><img src="img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="./"><img src="img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="./"><img src="img/redes/youtube.svg" alt="Youtube"></a>
+                    <a href="./"><img src="img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+                    <a href="./"><img src="img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+                    <a href="./"><img src="img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
                 </div>
             </div>
             <div class="rodape-informacoes">
