Inclusão do JavaScript ao site

--- a/contato.html
+++ b/contato.html
@@ -138,6 +138,7 @@
             <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
