--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -38,7 +38,7 @@
             <div class="bicicleta-conteudo">
                 <p class="font-2-l cor-05">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
-                    <a class="button" href="../orcamento.html">Comprar Agora</a>
+                    <a class="button" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
                     <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
                     <span class="font-1-xs cor-06"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
                 </div>
@@ -140,5 +140,6 @@
             <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
