--- a/seguros.html
+++ b/seguros.html
@@ -38,7 +38,7 @@
                     <li>Suporte 08h às 18h</li>
                     <li>Cobertura estadual</li>
                 </ul>
-                <a href="./orcamento.html" class="button secundario">inscreva-se</a>
+                <a href="./orcamento.html?tipo=seguro&produto=prata" class="button secundario">inscreva-se</a>
             </div>
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-p01">OURO</h3>
@@ -52,7 +52,7 @@
                     <li>Desconto em parceiros</li>
                     <li>Acesso ao Clube Bikcraft</li>
                 </ul>
-                <a href="./orcamento.html" class="button">inscreva-se</a>
+                <a href="./orcamento.html?tipo=seguro&produto=ouro" class="button">inscreva-se</a>
             </div>
         </div>
     </main>
@@ -97,28 +97,28 @@
         <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p01">.</span></h2>
         <dl>
             <div>
-                <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+                <dd id="pergunta1" class="font-2-s cor-09 ativa">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+                <dd id="pergunta2" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+                <dd id="pergunta3" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
+                <dd id="pergunta4" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+                <dd id="pergunta5" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-                <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ao ano?</button></dt>
+                <dd id="pergunta6" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
         </dl>
     </article>
@@ -153,6 +153,7 @@
             <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
